--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,19 @@
+application: your-app-id
+version: 1
+runtime: python27
+api_version: 1
+threadsafe: yes
+
+handlers:
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon\.ico
+
+- url: /app-stylesheets
+  static_dir: app-stylesheets
+
+- url: /my-images
+  static_dir: my-images
 
 #new handlers should go ABOVE the catch all url (.*)
 - url: .*
