login feature app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -24,15 +24,15 @@ handlers:
   upload: favicon\.ico
 
 - url: /app-stylesheets
-  static_dir: app-stylesheets 
-  
+  static_dir: app-stylesheets
+
 - url: /my-images
   static_dir: my-images
-  
+
 #new handlers should go ABOVE the catch all url (.*)
 - url: .*
   script: main.app
-  
+  login: required
 
 libraries:
 - name: webapp2
