minor change to app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -32,7 +32,7 @@ handlers:
 #new handlers should go ABOVE the catch all url (.*)
 - url: .*
   script: main.app
-  login: optional
+  login: required
 
 libraries:
 - name: webapp2
