Added captions to post page

--- a/index.yaml
+++ b/index.yaml
@@ -13,5 +13,17 @@ indexes:
 - kind: Item
   properties:
   - name: user_id
+  - name: caption
+    direction: desc
+
+- kind: Item
+  properties:
+  - name: user_id
+  - name: image
+    direction: desc
+
+- kind: Item
+  properties:
+  - name: user_id
   - name: title
     direction: desc
