--- a/index.yaml
+++ b/index.yaml
@@ -19,6 +19,12 @@ indexes:
 - kind: Item
   properties:
   - name: user_id
+  - name: created_on
+    direction: desc
+
+- kind: Item
+  properties:
+  - name: user_id
   - name: image
     direction: desc
 
